# cython-demo

./: .gitignore  README.md  bench.py  demo.ipynb  justfile  pyproject.toml
src/cython_demo/: slow.py
src/cython_tests/: .gitignore  __init__.py  boo.py  wow.c  wow.py
tests/: test_times.py
