[project]
name = "cython-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arthur Lui", email = "alui@lanl.gov" }
]
requires-python = ">=3.13"
dependencies = [
    "build>=1.2.2.post1",
    "cython>=3.0.11",
]

[build-system]
requires = ["setuptools>=74.1", "Cython"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.ruff]
line-length = 80
lint.extend-select = ["I"]
lint.extend-unsafe-fixes = ["F401"]

[tool.setuptools]
ext-modules = [
    {name="cython_demo.fast", sources=["src/cython_demo/slow.py"]}
]
